--- a/src/PocMongoDb/appsettings.json
+++ b/src/PocMongoDb/appsettings.json
@@ -7,9 +7,7 @@
   },
   "AllowedHosts": "*",
   "Connection": {
-    //"ConnectionString": "mongodb+srv://kip_user:kip_user@cluster0.2rrdep3.mongodb.net/",
-    //"ConnectionString": "mongodb://kip_user:kip_user@localhost:27017/",
-    "ConnectionString": "mongodb://root:123456@localhost:27017/?authMechanism=SCRAM-SHA-1",
+    "ConnectionString": "mongodb://root:USUARIO@localhost:SENHA/?authMechanism=SCRAM-SHA-1",
     "Database": "PocMongoDb",
     "IsSSL": false
   }
